--- a/SMT.Rmd
+++ b/SMT.Rmd
@@ -22,9 +22,12 @@ dat <- read.csv('SBSimple.csv')
 dat <- na.omit(dat)
 ```
 
+## Data Manipulation
+
+In here, we split the data into evented data (stage 1-4 as discused in the paper). Also, we split into train and test sets.
 ```{r dataManip}
 playered_data <- dat %>%
-  select(-c(X, timediff, play_id, game_str, timestamp, popTime))
+  select(-c(X, timestamp, timediff, play_id, game_str, timestamp, popTime))
 
 playered_data$SB <- as.factor(playered_data$SB)
 levels(playered_data$SB) <- c("caught", "success")
@@ -64,6 +67,10 @@ fielder_train_data <- fielder_data[fielder_sample, ]
 fielder_test_data <- fielder_data[-fielder_sample, ]
 ```
 
+## Lasso
+
+In here, we try LASSO regression. We don't end up using this, but we went back and forth a lot between using LASSO, RIDGE, basic GLM, non-parametric GLMs, and many more models semi-explored in SMTv2.
+
 ```{r filtered_event_lasso}
 pitcher_train_data_selected <- pitcher_train_data %>%
   select(SB, rDist2B, maxSpeed)
@@ -78,7 +85,7 @@ myControl <- trainControl(
                            summaryFunction = twoClassSummary,
                            classProbs = TRUE
                           )
-lasso_tune_grid= expand.grid(alpha = 1, lambda = seq(0.0001, 1, length = 100))
+lasso_tune_grid= expand.grid(alpha = 1, lambda = seq(0.0001, 10, length = 100))
 pitcher_selected_lasso<-train(SB ~ ., data = pitcher_train_data_selected,
                  method = 'glmnet', 
                  tuneGrid = lasso_tune_grid,
@@ -162,11 +169,11 @@ ll_ct_test = LogLoss(extractProb(list(catcher_throw_selected_final_lasso), testX
 un_factored_truth <- ifelse(fielder_test_data_selected$SB == 'caught', 0, 1)
 ll_f_test = LogLoss(extractProb(list(fielder_selected_final_lasso), testX = fielder_test_data_selected)$success, un_factored_truth)
 c(ll_pitcher_test, ll_oc_test, ll_ct_test, ll_f_test)
-
-test_lasso <- glm(SB~maxSpeed, data=pitcher_train_data_selected, family='binomial')
-un_factored_truth <- ifelse(pitcher_train_data_selected$SB == 'caught', 0, 1)
-ll_test <- LogLoss(predict(test_lasso, pitcher_train_data_selected), un_factored_truth)
 ```
+
+## RIDGE Regression
+
+Here, we fit Ridge regression models to each stage. This is the model type we ended up using, although it was further tweaked. To note, some of the models may actually appear different on different runs due to how the underlying process doesn't work super well in terms of reproducibility. We use a KFold approach in a different document with a slightly better version using KFold selection, which is just something that holds one sample out each time, fits, and repeats to find the best fitting model.
 
 ```{r filtered_event_ridge}
 pitcher_train_data_selected <- pitcher_train_data %>%
@@ -266,11 +273,11 @@ ll_ct_test = LogLoss(extractProb(list(catcher_throw_selected_final_ridge), testX
 un_factored_truth <- ifelse(fielder_test_data_selected$SB == 'caught', 0, 1)
 ll_f_test = LogLoss(extractProb(list(fielder_selected_final_ridge), testX = fielder_test_data_selected)$success, un_factored_truth)
 c(ll_pitcher_test, ll_oc_test, ll_ct_test, ll_f_test)
-
-test_ridge <- glm(SB~maxSpeed, data=pitcher_train_data_selected, family='binomial')
-un_factored_truth <- ifelse(pitcher_train_data_selected$SB == 'caught', 0, 1)
-ll_test <- LogLoss(predict(test_ridge, pitcher_train_data_selected), un_factored_truth)
 ```
+
+## GLM
+
+We also wanted to try a basic GLM approach as well. This wasn't eventually used, but this is here for records sake.
 
 ```{r glm}
 pitcher_train_data_selected <- pitcher_train_data %>%
@@ -305,4 +312,4 @@ ll_ct_s_final <- LogLoss(predict(catcher_throw_simple, catcher_throw_test_data_s
 un_factored_truth <- ifelse(fielder_test_data_selected$SB == 'caught', 0, 1)
 ll_f_s_final <- LogLoss(predict(fielder_simple, fielder_test_data_selected, type='response'),  un_factored_truth)
 c(ll_p_s_final, ll_oc_s_final, ll_ct_s_final, ll_f_s_final)
-```s
+```
